# wl_vs_rademacher

./: 1.ipynb  2.ipynb  3.ipynb  NCI1_5.csv  NCI1_500.csv  Q2.bound.py  README.md  Synthetic_benchmarks.py  analyze_wandb_scaling.py  environment.yml  process.ipynb  pyproject.toml  requirements.txt  rewired_regular.py  run_experiment.py  run_perturb.py
Q2/: main_colors.py
src/: net.py  utils.py
wandb/: latest-run
wandb/run-20260428_170008-k1ncivc9/: run-k1ncivc9.wandb
wandb/run-20260428_170008-k1ncivc9/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260428_170053-v4lhu7zz/: run-v4lhu7zz.wandb
wandb/run-20260428_170053-v4lhu7zz/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260428_170105-um3ea84p/: run-um3ea84p.wandb
wandb/run-20260428_170105-um3ea84p/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260428_170114-9y9xr5mx/: run-9y9xr5mx.wandb
wandb/run-20260428_170114-9y9xr5mx/files/: config.yaml  diff_012a453129bdb5dd55c98e91a6367a91f82e344c.patch  wandb-metadata.json  wandb-summary.json
wandb/run-20260428_170127-9frunr6y/: run-9frunr6y.wandb
wandb/run-20260428_170127-9frunr6y/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260428_170144-sx6wiq9p/: run-sx6wiq9p.wandb
wandb/run-20260428_170144-sx6wiq9p/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260428_173859-ou50te12/: run-ou50te12.wandb
wandb/run-20260428_173859-ou50te12/files/: config.yaml  diff.patch  diff_012a453129bdb5dd55c98e91a6367a91f82e344c.patch  wandb-metadata.json  wandb-summary.json
wandb/run-20260428_173956-nfi4x2ki/: run-nfi4x2ki.wandb
wandb/run-20260428_173956-nfi4x2ki/files/: config.yaml  diff.patch  diff_012a453129bdb5dd55c98e91a6367a91f82e344c.patch  wandb-metadata.json  wandb-summary.json
wandb/run-20260428_174017-i3veljnv/: run-i3veljnv.wandb
wandb/run-20260428_174115-sj7fqfkr/: run-sj7fqfkr.wandb
wandb/run-20260428_174158-cg6vbdum/: run-cg6vbdum.wandb
wandb/run-20260428_174304-apuli11j/: run-apuli11j.wandb
(+22 files in other folders)
