[project]
name = "wl-vs-rademacher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "torch==2.4.0",
    "torch-geometric>=2.7.0",
    "wandb>=0.26.0",
]
